--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nprogress": "0.2.0",
     "vue": "2.5.17",
     "vue-router": "3.0.1",
+    "vue-table-with-tree-grid": "^0.2.4",
     "vuex": "3.0.1"
   },
   "devDependencies": {
